      data-frame columns with \eqn{2^{31}}{2^31} or more elements.
      
      \item The default method of \code{split()} is faster when \code{f}
      is an integer vector (for example, when called from \code{tapply()}).
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item The included version of LAPACK has been updated to 3.5.0.

      \item There is some support for parallel testing of an
      installation, by setting \env{TEST_MC_CORES} to an integer
      greater than one to indicate the maximum number of cores to be
      used in parallel. (It is worth specifying at least 8 cores if
      available.)  Most of these require a \command{make} program (such
      as GNU \command{make} and \command{dmake}) which supports the
      \command{${MAKE} -j nproc} syntax.

      Except on Windows: the tests of standard package examples in
      \command{make check} are done in parallel.  This also applies to
      running \code{tools::testInstalledPackages()}.

      The more time-consuming regression tests are done in parallel.

      The package checks in \command{make check-devel} and \command{make
	check-recommended} are done in parallel.

      \item More of \command{make check} will work if recommended packages
      are not installed: but recommended packages remain needed for
      thorough checking of an \R build.
      
      \item (Windows only.)  The version of \samp{tzcode} included in
      \file{src/extra/tzone} has been updated.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item The \code{CRANextra} repository is no longer a default
      repository on Windows: all the binary packages from CRAN are now
      on CRAN, although \code{CRANextra} contains packages from Omegahat
      and elsewhere used by CRAN packages on Windows.

      \item Only vignettes sources in directory \file{vignettes} are
      considered to be vignettes and hence indexed as such.
