@@ -1,0 +1,23 @@
+% File src/library/base/man/La_version.Rd
+% Part of the R package, http://www.R-project.org
+% Copyright 2013 R Core Team
+% Distributed under GPL 2 or later
+
+\name{La_version}
+\alias{La_version}
+\title{
+  LAPACK version
+}
+\description{
+  Report the version of LAPACK in use.
+}
+\usage{
+La_version()
+}
+\value{
+  A character vector of length one.
+}
+\examples{
+La_version()
+}
+\keyword{utilities}
